<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reg_display" android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="MissingConstraints">
        <RelativeLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="15.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip">
            <RelativeLayout android:id="@+id/logo" android:background="@drawable/jmeet_logo" android:layout_width="75.0dip" android:layout_height="75.0dip" android:layout_centerHorizontal="true" />
            <TextView android:textSize="25.0sp" android:textStyle="bold" android:textColor="@color/black" android:layout_gravity="center_horizontal" android:id="@+id/logo_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_name" android:layout_below="@+id/logo" android:textAlignment="center" />
            <TextView android:textSize="19sp" android:textColor="@color/purple_700" android:layout_gravity="center_horizontal" android:id="@+id/reg_title" android:padding="7dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/daftar" android:layout_below="@+id/logo_title" android:textAlignment="center" />
            <RelativeLayout
                android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/reg_title">
                <EditText android:id="@+id/name" android:background="@drawable/edit_text" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:paddingRight="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:hint="@string/nama_lengkap" android:inputType="text" />
                <EditText android:id="@+id/email" android:background="@drawable/edit_text" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:paddingRight="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:hint="@string/email" android:layout_below="@+id/name" android:inputType="textEmailAddress" />
                <EditText android:id="@+id/phone" android:background="@drawable/edit_text" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:paddingRight="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:hint="@string/telp" android:layout_below="@+id/email" android:inputType="phone" />
                <EditText android:id="@+id/password" android:background="@drawable/edit_text" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:paddingRight="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:hint="@string/password" android:layout_below="@+id/phone" android:inputType="textPassword" />
                <EditText android:id="@+id/confirm_password" android:background="@drawable/edit_text" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:paddingRight="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:hint="@string/confirm_password" android:layout_below="@+id/password" android:inputType="textPassword" />
                <LinearLayout
                    android:layout_below="@id/confirm_password"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/btn_register"
                        android:padding="15.0dip"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:text="@string/daftar_akun"
                        android:layout_width="wrap_content" />
                    <Button
                        android:id="@+id/to_Login"
                        android:layout_weight="1"
                        android:backgroundTint="@color/teal_700"
                        android:padding="15.0dip"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:text="@string/login"
                        android:layout_width="wrap_content"
                        tools:targetApi="lollipop" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/progress_backdrop"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:alpha="0.9"
        tools:ignore="MissingConstraints"/>
    <RelativeLayout
        android:id="@+id/progress_wrap"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_centerInParent="true"
            android:id="@+id/progressBar"
            android:layout_width="75.0dip"
            android:layout_height="75.0dip"
            android:indeterminateTint="@color/purple_700"
            android:indeterminate="true"
            tools:targetApi="lollipop" />
        <TextView
            android:layout_below="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/memproses_data"
            android:textSize="25sp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@color/purple_700"
            android:layout_gravity="center_horizontal" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>