<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="25dp"
        android:paddingVertical="15dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_margin="1dp"
            android:background="@drawable/edit_text"
            android:inputType="text"
            android:hint="@string/nama_pertemuan"/>

        <EditText
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_margin="1dp"
            android:background="@drawable/edit_text"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:hint="Deskripsi Pertemuan"/>

        <TextView
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_margin="1dp"
            android:textSize="17sp"
            android:background="@drawable/edit_text"
            android:hint="@string/waktu_mulai"/>

        <TextView
            android:id="@+id/end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_margin="1dp"
            android:textSize="17sp"
            android:background="@drawable/edit_text"
            android:hint="@string/waktu_selesai"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:padding="15dp"
                android:text="@string/simpan"/>
            <Button
                android:id="@+id/d_cancel"
                android:layout_width="0dp"
                android:layout_margin="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:text="@string/cancel"
                android:padding="15dp"
                tools:targetApi="lollipop" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>