<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="25dp"
        android:paddingVertical="15dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/kode_meet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:hint="@string/kode_meeting"
            android:textAlignment="center"
            android:padding="15dp"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/pwrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/join_meet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="1dp"
                    android:padding="15dp"
                    android:text="@string/ikuti_rapat"/>
                <Button
                    android:id="@+id/d_cancel"
                    android:layout_width="0dp"
                    android:layout_margin="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/teal_700"
                    android:text="@string/cancel"
                    android:padding="15dp"
                    tools:targetApi="lollipop" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>